tests/warn/indentation.jo
def test =
  val a =
    3 * (5 +
         6
        )
        - 4


  val b =
    20 - (
      4 + 6) * 5

  val c =
      20 - (
    4 + 6) * 5

def fact(n: Int) =
  if 0 == n then 1
  else fact (n - 1) * n

def fact1(n: Int) =
  if 0 == n then 1
    else fact1 (n - 1) * n   // error

def foo() =
    println 4
  5 p          // error
    println 6
      7 p      // expression continues to this line

def fact2(n: Int) =
  if 0 == n then 1
  else fact2 (n - 1) * n
     end                    // error
